--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+body {
+  background-color: skyblue;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
 .App {
   text-align: center;
 }
